--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
