Login, Dashboard, logout, sign-up added

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB_USERNAME = 'uzair'
-DB_PASSWORD = 'neymarjr11'
+DB_USERNAME = "uzair"
+DB_PASSWORD = "neymarjr11"
+SEC = yghjerhuir@#$%^&*()oiujhbe)*&!789323889029
